@@ -2,6 +2,8 @@ Release history for Dist::Zilla::Plugin::JSAN
 
 {{$NEXT}}
 
+        - changed the url of css file for docs converted from markdown and its now configurable
+
 0.04      2010-12-12 15:27
         
         - added missed dependency from Dist::Zilla::Plugin::GithubMeta
